--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.project</groupId>
-	<artifactId>web-indexer</artifactId>
+	<artifactId>ics-search-engine</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<build>
 		<plugins>
