--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,11 @@ jdk:
   - oraclejdk8
 script:
   - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+  - mvn cobertura:cobertura
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash) 
 cache:
   directories:
     -  ~/.m2/repository
     -  ~/.sonar/cache
-
