--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,7 @@ cache:
   directories:
     -  ~/.m2/repository
     -  ~/.sonar/cache
-
+notifications:
+  email:
+    on_success: never
+    on_failure: change
