--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,27 @@
 					<webXml>src\main\webapp\WEB-INF\web.xml</webXml>
 				</configuration>
 			</plugin>
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-dependency-plugin</artifactId>
+	            <version>2.3</version>
+	            <executions>
+	                <execution>
+	                    <phase>package</phase>
+	                    <goals><goal>copy</goal></goals>
+	                    <configuration>
+	                        <artifactItems>
+	                            <artifactItem>
+	                                <groupId>com.github.jsimone</groupId>
+	                                <artifactId>webapp-runner</artifactId>
+	                                <version>8.5.11.3</version>
+	                                <destFileName>webapp-runner.jar</destFileName>
+	                            </artifactItem>
+	                        </artifactItems>
+	                    </configuration>
+	                </execution>
+	            </executions>
+	        </plugin>			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -139,7 +160,12 @@
 		    <artifactId>jung-algorithms</artifactId>
 		    <version>2.1.1</version>
 		</dependency>
-
+		<dependency>
+		  <groupId>com.github.jsimone</groupId>
+		  <artifactId>webapp-runner</artifactId>
+		  <version>8.5.11.3</version>
+		  <scope>provided</scope>
+		</dependency>
 		<!--dependency> <groupId>org.mongodb.mongo-hadoop</groupId> <artifactId>mongo-hadoop-core</artifactId> 
 			<version>1.5.1</version> </dependency -->
 	</dependencies>
